[gd_scene load_steps=4 format=3 uid="uid://c8mpq5k80nw87"]

[ext_resource type="Theme" uid="uid://bnulg8akvjth4" path="res://DarkTheme/Dark.theme" id="1_74pes"]
[ext_resource type="Script" path="res://PropPropertiesUI.gd" id="1_we2y5"]

[sub_resource type="SystemFont" id="SystemFont_mex8p"]

[node name="PropPropertiesUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_74pes")
script = ExtResource("1_we2y5")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -227.0
offset_top = 11.0
offset_right = -13.0
offset_bottom = 462.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -225.5
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel3/VBoxContainer"]
layout_mode = 2
text = "Texture"

[node name="TextureSelector" type="ItemList" parent="Panel3/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 380)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
fixed_column_width = 200
icon_mode = 0
fixed_icon_size = Vector2i(150, 100)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel3/VBoxContainer"]
layout_mode = 2

[node name="ImageUrl" type="TextEdit" parent="Panel3/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_mex8p")
theme_override_font_sizes/font_size = 8
placeholder_text = "Custom Image Url"
wrap_mode = 1

[node name="ApplyButton" type="Button" parent="Panel3/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"
